// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`.not.toIncludeRepeated > fails when given string includes given substring 1 time 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toIncludeRepeated([22m[32mexpected[39m[2m)[22m

Expected string to not include repeated 1 times:
  [32m\\"ell\\"[39m
Received:
  [31m\\"hello world\\"[39m"
`;

exports[`.not.toIncludeRepeated > fails when given string includes given substring to the given occurrences 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toIncludeRepeated([22m[32mexpected[39m[2m)[22m

Expected string to not include repeated 3 times:
  [32m\\"l\\"[39m
Received:
  [31m\\"hello world\\"[39m"
`;

exports[`.toIncludeRepeated > fails when given string does not have a given substring the correct number of times 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toIncludeRepeated([22m[32mexpected[39m[2m)[22m

Expected string to include repeated 2 times:
  [32m\\"world\\"[39m
Received:
  [31m\\"hello world\\"[39m"
`;

exports[`.toIncludeRepeated > fails when given string does not include given substring 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toIncludeRepeated([22m[32mexpected[39m[2m)[22m

Expected string to include repeated 1 times:
  [32m\\"bob\\"[39m
Received:
  [31m\\"hello world\\"[39m"
`;
